styles.scss
/* ... */
input[id^=profile-headshot-2]:checked ~ [data-target="2"] {display: block;}
input[id^=profile-headshot-3]:checked ~ [data-target="3"] {display: block;}

// @misc -@ Media
@media (max-width: 768px) {
  .headshot {
    float: unset;
    margin: auto;
    margin-top: 1rem;
  }
  .headshot--pos-first {
    margin-bottom: 1rem;
  }
  .headshot-accordion {
    margin-left: auto;
    margin-right: auto;
  }
}

// * @main # Contact List
.contact--home {
  --icon-atlas-x: 1;
}
.contact--old {
  --icon-atlas-x: 7;
}
.contact--lab {
  --icon-atlas-x: 8;
}
.contact--mail {
  --icon-atlas-x: 9;
}
.contact--twitter {
  --icon-atlas-x: 10;
}
.contact--misskey {
  --icon-atlas-x: 11;
}
.contact--github {
  --icon-atlas-x: 12;
}
.contact--discord {
  --icon-atlas-x: 13;
}
.contact--bluesky {
  --icon-atlas-x: 14;
}
.contact-lists {
  --clr-link: var(--clr-text);
  --clr-link-visited: var(--clr-text);
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  // flex-wrap: wrap;
  gap: .5rem;
}
.contact-lists--404 {
  --grid-size: 4;
  grid-template-columns: repeat(var(--grid-size), 1fr)
}
.contact-lists--navigation {
  --grid-size: 3;
  grid-template-columns: repeat(var(--grid-size), 1fr);
  gap: 8px;
  & > hr {
    border: 1px solid var(--clr-border);
    grid-column: span var(--grid-size);
    width: 100%;
    margin: 0;
  }
}
@media (max-width: 768px) {
  .contact-lists--404 {
    --grid-size: 3;
  }
  .contact-lists--navigation {
    --grid-size: 2;
  }
}
.contact-list {
  // flex: 1;
  // flex-grow: 1;
  // cursor: pointer;
  --contact-padding-y: 16px;
  --contact-icon-y: 48px;
  padding: var(--contact-padding-y) 8px;
  font-size: 16px;
  // width: min(100%, 110px);
  text-decoration: none;
  text-align: center;
  background-color: var(--clr-background);
  &:is(:hover, :focus) {
    background-color: var(--clr-secondary);
    box-shadow: 0 0 0 4px inset var(--clr-border);
  }
}
// Structural order mess up, should have done this first and name it container but eh it's fine
.contact-list--alt {
  // z-index for tooltip shenanigan
  --tooltip-transition: .25s;
  z-index: 0;
  position: relative;
  padding: unset;

  transition: z-index var(--tooltip-transition);
  &:hover {
    z-index: 1;
    transition: z-index 0s;
  }
  &:focus-within {
    z-index: 2;
    transition: z-index 0s;
  }
  & a {
    display: block;
    padding: 16px 8px;
  }
}
.contact-icon {
  // float: left;
  image-rendering: pixelated;
  display: block;
  margin: auto;
  margin-bottom: .5rem;
  width: 48px;
  height: var(--contact-icon-y);

  background-image: var(--icon-atlas48-path);
  background-position: calc(var(--icon-atlas-x) * (var(--icon-atlas-size) * -1) + var(--icon-atlas-size)) calc(var(--icon-atlas-y) * (var(--icon-atlas-size) * -1) + var(--icon-atlas-size));
  &[src$=svg] {
    filter: invert(1) brightness(90%);
  }
  // Placeholder, hover asset doesn't exist
  // &:hover {
  //   --icon-atlas-y: 2;
  // }
}
.contact-list-tooltip {
  user-select: all;
  visibility: hidden;
  position: absolute;
  width: fit-content;
  left: 0;
  right: 0;
  padding: .75rem 1rem;
  opacity: 0;
  
  cursor: text;
  color: var(--clr-tooltip-text);
  background-color: var(--clr-tooltip-background);
  border-image: url(/img/border-2.png) 8 / 16px / 0 0;
  transition: visibility var(--tooltip-transition), opacity var(--tooltip-transition);
}
.contact-list:is(:hover, :focus-within) > .contact-list-tooltip {
  opacity: 1;
  visibility: visible;
}

// @main # More Link Popup
.more-link-popup {
  z-index: 9;
  background: var(--clr-secondary);
  position: absolute;
  visibility: hidden;
  opacity: 0;
  box-sizing: border-box;
  padding: 8px;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 360px;
  max-width: 100vw;
  max-height: 75vh;
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
  
  border-image: url(/img/border-1-default-alt.png) 6 / 16px / 8px;
  // transform: scale(.88) translate(0) rotateZ(4deg);
  transition: opacity .25s, transform .5s, visibility .5s;
}
.more-link-popups:focus-within > .more-link-popup {
  visibility: visible; 
  opacity: 1;
  transform: none;
  transition: opacity .25s, transform .25s, visibility .25s;
}
// Desktop is separated for now because i'm not sure if this will stay
@media (min-width: 769px) {
  .more-link-popup {
    top: 88px;
    right: -8px;
    left: unset;
    bottom: unset;
    // border-image: url(/img/border-1-default-alt.png) 6 / 0 16px 16px 16px / 0 4px 4px 4px;
    transform: translateY(-8px);
    transition: opacity .25s, transform 0s .25s, visibility .25s;
  }
  .more-link-popups:focus-within > .more-link-popup {
    transition: opacity .25s, transform .25s, visibility .25s;
  }
}
@media (max-width: 768px) {
  .more-link-popup {
    top: unset;
    left: unset;
    bottom: 83px;

    border-image: url(/img/border-1-default-alt.png) 6 / 16px 0 0 16px / 8px 0 0 8px; // Remove right and bottom border image + outset. Affected by .nav-main and .nav-list size
    border-bottom: 0; // This remove the invisible border
    border-right: 0;
    // transform: none; // Reset transformation
    transition: opacity .25s, visibility .5s;
    & > * {
      transform: translateY(1rem);
      transition: transform .25s;
    }
  }
  .more-link-popups:focus-within > .more-link-popup > * {
    transform: none;
  }
}

// @main # Skip to
.skip-to-main {
  z-index: 9;
  position: fixed;
  top: 0;
  left: 10%;
  width: fit-content;
  padding: 16px;
  text-decoration: none;
  background-color: var(--clr-tooltip-background);
  border-image: url(/img/border-2.png) 8 / 16px / 0px;
  transform: translateY(-100%);
  transition: transform .25s;
  &:focus {
    transform: translateY(1rem);
  }
  &::after {
    content: "Skip";
    color: var(--clr-tooltip-text);
  }
}
/* ... */

